le cambie el titulo a la doc

--- a/analisis.tex
+++ b/analisis.tex
@@ -7,7 +7,7 @@
 %\newcommand{\proceso}{Gestión Integral de Residuos Sólidos Urbanos }
 \defSistema{SIDAM}
 
-\title{\Sistema \\\LARGE{Subsistema Banco de Estudio y Seguimiento de Proyectos \\{\bf Prototipo 1}}}
+\title{\Sistema \\\LARGE{sistema de rex \\{\bf Prototipo 1}}}
 \subtitle{Análisis de Requerimientos}
 %\author{}
 
