De nuevo se da commit
Como que no toma los cambios completos.

--- a/analisis.tex
+++ b/analisis.tex
@@ -29,13 +29,7 @@
 
 	En este capítulo se describe el alcance del prototipo a desarrollar. El alcance del sistema se ha definido como se muestra en la figura~\ref{fig:casosDeUsoCompleto} en donde cada módulo se describe a continuación.
 
-\begin{figure}[htbp!]
-	\begin{center}
-		\includegraphics[width=1\textwidth]{images/alcance.jpg}
-		\caption{Casos de uso del sistema.}
-		\label{fig:casosDeUsoCompleto}
-	\end{center}
-\end{figure}
+
 
 \begin{description}
 	\item[Secretaría:] Incluye toda la funcionalidad para que la dirección pueda definir los Programas de la Secretaría y monitorearlos en un nivel muy general. El monitoreo incluye: avances, estado financiero global, semáforos y notas dirigidas a la gerencia. Así como la definición de Temas Transversales y Ejes temáticos.
@@ -171,7 +165,7 @@ Todos los cambios deben realizarse con base en las definiciones y consideracione
 
   	\begin{figure}[h!]
  		\centering
- 			\includegraphics[width=.8\textwidth]{images/modeloER.jpg}
+ 			\includegraphics[width=.8\textwidth]{images/modeloER}
  		\caption{Unidad}
  	\end{figure}
 
