--- a/reglas.tex
+++ b/reglas.tex
@@ -1,696 +1,6 @@
 %reglas de negocio generales
 
-\begin{BussinesRule}{RN1}{Identificación de elementos}
+\begin{BussinesRule}{RN1}{Asociacion de reporte de actividades.}
 	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Para todos los campos de catálogos nombrados como ``id'' o ``nombre'', no podrán repetir sus valores. Los catálogos que tienen excepciones a esta reglas son:
-	\begin{itemize}
-		\item Usuario. Para este caso el campo login no debe ser repetido
-	\end{itemize}}
+	\BRitem{Descripción:}{Cada reporte de actividades debe estar asociados con un empleado que se encuentre entre los datos de nomina y asistencia.}
 \end{BussinesRule}
-
-\begin{BussinesRule}{RN2}{Valores de campos}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Para todos los campos de todos los catálogos no se deben tener valores vacíos o nulos. Se consideran catálogos: 
-		\begin{itemize}
-			\item Área
-			\item Perfil de usuario
-			\item Tipo de contacto
-			\item Tema transversal
-			\item Eje temático
-			\item Nivel
-			\item Programa de primer nivel
-			\item Contacto
-		\end{itemize}
-	}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN3}{Fecha inicio}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Establece la fecha en la cual inicia un Programa/Estructura/Proyecto/Acción.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN4}{Fecha final}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Establece la fecha en la cual termina un Programa/Estructura/Proyecto/Acción.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN5}{Duración}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Establece la cantidad de tiempo que requiere el Programa/Estructura/Proyecto/Acción para su culminación. Esta puede estar establecida en las siguientes unidades: días, semanas, meses y años}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN6}{Periodo}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Establece una restricción en el tiempo que requiere el Programa/Estructura/Proyecto/Acción para su culminación, esta puede determinarse con base en una fecha de inicio y/o fecha final y/o duración.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN7}{Periodo válido}%definición recursiva
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Un periodo para una Estructura/Proyecto/Acción es válido si su definición está dentro del periodo de su padre.}
-\end{BussinesRule}
-
-%TODO:Corregir definiciones
-\begin{BussinesRule}{RN8}{Eje temático}%definición recursiva
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Es un principio orientador que rige el que hacer institucional de la SMA.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN9}{Tema transversal}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Definen temas que se involucran con los ejes temáticos.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN10}{Programa}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Agrupa estrategias para resolver las problemáticas derivadas de los ejes temáticos.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN11}{Asignación de Programa y Proyecto}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Cada Programa debe tener un Gerente y cada Proyecto debe tener un Coordinador.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN12}{Cierre de Programa}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Un Programa se cierra al concluir el sexenio y esto implica que sólo queda disponible para su consulta histórica.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN13}{Eliminación de Programa}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Un Programa sólo se puede eliminar cuando ninguno de sus proyectos está en curso.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN14}{Avance del Programa}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{El avance del Programa se calcula multiplicando el porcentaje de avance de cada proyecto por su ponderación y sumando estas cantidades.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN15}{Estructura de Programa}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Todo Programa está compuesto de uno o más elementos organizados jerárquicamente llamados Elementos de Estructura. Para hacer referencia a la jerarquía en la cual se organizan los Elementos se utilizará los conceptos relacionados a la estructura de dato árbol.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN16}{Nivel de Elemento de Estructura}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Cada Elemento de Estructura pertenece a un nivel jerárquico.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN17}{Proyecto}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Un proyecto contiene acciones e indicadores financieros. Un proyecto debe estar dividido en una o más acciones.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN18}{Proyecto preregistrado}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Un proyecto preregistrado es aquel que se pone a consideración del Administrador para su verificación. Los datos para un proyecto preregistrado son:
-	\begin{itemize}
-		\item Datos del responsable:
-			\begin{itemize}
-				\item Nombre: El nombre(s) del usuario responsable del proyecto
-				\item Apellido paterno: El apellido paterno del usuario responsable del proyecto
-				\item Apellido materno: El apellido materno del usuario responsable del proyecto
-				\item RFC: El Registro Federal de Contribuyentes del usuario responsable del proyecto
-				\item Área: El área a la que pertenece el usuario responsable del proyecto
-				\item Cargo: El cargo del usuario responsable del proyecto
-				\item Teléfono Principal: El teléfono principal por el cual se puede contactar al usuario responsable del proyecto
-				\item Correo Principal: El correo electrónico principal por el cual se puede contactar al usuario responsable del proyecto
-			\end{itemize}
-		\item Siglas: Iniciales del nombre del Proyecto
-		\item Nombre: Nombre que identifica el Proyecto
-		\item Resumen: Breve descripción del Proyecto
-		\item Objetivo General: Objetivo al cual se quiere llegar
-		\item Fecha de preregistro: Fecha en el que se realizó el registro
-	\end{itemize}
-	En caso de que el usuario que preregistra el proyecto no esté registrado en el sistema, la información del usuario se almacena en un campo de la tabla proyecto llamado datos de preregistro.
-      }
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN19}{Eliminación de usuario}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Sólo se puede eliminar un usuario, cuando este no tenga trabajo registrado en el sistema. En caso contrario se puede considerar la desactivación de la cuenta. Se dice que \textit{``Trabajo''} es:
-	\begin{itemize}
-		\item Para Director:
-			\begin{itemize}
-				\item Haber atendido una restricción
-			\end{itemize}
-		\item Para Gerente:
-			\begin{itemize}
-				\item Haber atendido una restricción
-				\item Haber derivado una restricción
-				\item Haber aprobado un proyecto
-			\end{itemize}
-		\item Para Coordinador:
-			\begin{itemize}
-				\item Haber registrado un proyecto
-			\end{itemize}
-	\end{itemize}
-	}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN20}{Modificación de usuario}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Sólo se puede modificar el perfil y área de un usuario cuando este no tenga trabajo registrado en el sistema.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN21}{Usuario activo}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Un usuario activo es aquel que puede ingresar al sistema.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN22}{Usuario inactivo}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Un usuario se inactiva (desactiva) cuando es necesario impedir el acceso al sistema del mismo. Un usuario se reactiva cuando se desea que el trabajo realizado por el usuario tenga continuidad.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN23}{Perfile}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Existen 4 perfiles en el sistema, a continuación se enumeran y se describen las facultades de cada uno:
-	\begin{enumerate}
-		\item Administrador: Es el encargado de realizar tareas de mantenimiento en el sistema.
-		\begin{itemize}
-			\item Mantenimiento de los siguientes catálogos:
-				\begin{itemize}
-					\item Usuario
-					\item Unidad
-					\item Fuente
-					\item Eje temático
-					\item Tema transversal
-					\item Áreas
-					\item Administrador
-				\end{itemize}
-
-			\item Vo.bo. de cambio de estado de proyecto a registrado.
-		\end{itemize}
-		\item Director: Es el responsable de Programas.
-		\begin{itemize}
-			\item Catálogo de Programa
-			\item Monitoreo de todos los Programas
-		\end{itemize}\BRref{RN40}
-		\item Gerente: Es el responsable de generar los Elementos de la Estructura de su Programa asociado.
-		\begin{itemize}
-			\item Catálogo de Nivel
-			\item Vo.bo. de cambio de estado de proyecto a aprobado y en modificación
-			\item Definición de la Estructura
-			\item Alineación de proyecto
-			\item Monitoreo del Programa que tenga asignado
-		\end{itemize}
-		\item Coordinador: Es el responsable de proyectos.
-		\begin{itemize}
-			\item Catálogo de unidades
-			\item Preregistro de proyecto
-			\item Catálogo de indicadores
-			\item Catálogo de metas
-			\item Registro \BRref{RN40} de indicadores
-			\item Registro de proyecto
-			\item Reportar avances
-			\item Monitoreo de los proyectos que tenga asignados
-		\end{itemize}
-	\end{enumerate}
-
-}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN24}{Organización de usuario}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Todo Usuario debe pertenecer a una Área y tener un perfil definido.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN25}{Contacto}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Establece el medio por el cual se contacta al usuario.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN26}{Contacto principal}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Es aquel que se usa como primera instancia para contactar o validar información de un usuario (como recuperar contraseñas). Cada usuario solo puede tener un contacto principal de cada tipo.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN27}{Mínimo de contactos principales}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Todo usuario debe tener al menos un correo principal y un teléfono fijo principal.}
-\end{BussinesRule}
-
-
-\begin{BussinesRule}{RN28}{Modificación de Perfil y Tipo de unidad}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Los perfiles y los Tipos de unidad no se deben modificar.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN29}{Eliminación de Tipo de contacto y Unidad}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Al eliminar un Tipo de contacto o Unidad que tenga datos asociados, estos deben asociarse a otro de los Tipos de contacto o Unidad registrados. Los tipos de contactos: teléfono y correo, no se pueden eliminar.}
-\end{BussinesRule}
-
-
-%Módulo de login
-\begin{BussinesRule}{RN30}{Bloqueo de cuenta}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{El sistema bloquea una cuenta de usuario por cinco minutos, después de tres intentos de acceso fallidos realizados en menos de cinco minutos.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN31}{Recuperación de contraseña}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Para recuperar una contraseña se debe utilizar el correo electrónico principal del usuario.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN32}{Periodo bien definido}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Un periodo bien definido es aquel donde su periodo es determinado, o indeterminado o relativo.
-	\begin{itemize}
-		\item Periodo determinado. Es aquel donde su fecha de inicio es menor a su fecha final
-		\item Periodo indeterminado. Es aquel donde no se conoce cuando inicia, ni cuando termina, ni cuanto dura. Por lo tanto al momento de registrarlo la duración debe ser igual a cero
-		\item Periodo Relativo. Es aquel donde se conoce su duración pero no se ha establecido fecha de inicio o fecha final
-	\end{itemize}	
-	}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN33}{Nombre para Programa/Elemento de Estructura/Proyecto/Acción}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Para cada Programa/Elemento de Estructura/Proyecto/Acción no se puede repetir el nombre cuando son hermanos (descendientes del  mismo padre).}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN34}{Eliminación de nivel}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Un nivel sólo se puede eliminar cuando no tiene ningún Elemento de Estructura asociada. Si tiene algún Elemento de Estructura asociada primero se elimina ésta para poder eliminar el nivel.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN35}{Definición de Elemento de Estructura}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Un Elemento de Estructura sólo puede ser definida sobre un Programa con Niveles definidos.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN36}{Eliminación de un Elemento de Estructura}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Un Elemento de Estructura solo puede ser eliminado si él, y ninguno de los Elementos de Estructura definidos debajo del mismo, se encuentren alineados con algún proyecto.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN37}{Definición de Nivel}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{El nombre y posición de un Nivel definido en un Programa 1n no se deben repetir. La Figura \ref{IUPrograma} ilustra como los nombres de los niveles no se pueden repetir siendo hijos del mismo padre, de igual forma si se sigue la linea \textbf{A, B, D} se puede observar que cada nodo esta en un nivel diferente cumpliendo con la regla de que la posición no se puede repetir.
-		\IUfig[0.4]{Programa.png}{IUPrograma}{Ejemplo de Nivel.}
-	}
-\end{BussinesRule}
-
-\newpage
-\begin{BussinesRule}{RN38}{Modificación de Nivel}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Sólo se pueden modificar el nombre y la descripción de un nivel.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN39}{Eliminación de Nivel}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Sólo se puede eliminar un nivel bajo las siguientes dos condiciones:
-			      \begin{enumerate}
-			       \item Que no sea usado por ningún Elemento de Estructura.
-			       \item Que su posición sea la mayor. Ejemplo: Posición:1 Nombre: Capítulo, Posición:2 Nombre: Subcapítulo. En este caso el único nivel que se puede eliminar es Subcapítulo, si se desea eliminar Capítulo antes se debe eliminar Subcapítulo.
-			      \end{enumerate}}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN40}{Siglas para Programa y Proyecto}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Las siglas de un Programa no se puede repetir, así como en los Proyectos que estén alineados con el mismo Elemento de Estructura(proyectos hermanos).}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN41}{Programa Sectorial}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Es un Programa en el cual se describen las acciones ambientales más relevantes que realizará la administración en turno.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN42}{Definición de Programa Sectorial}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Sólo se puede definir un Programa Sectorial por administración. Una vez utilizado un Programa sectorial, éste no podrá ser modificado.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN43}{Alineación de proyecto}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Un proyecto requiere ser alineado con un elemento de estructura de un programa. Las siguientes opciones de alineación son las que se consideran válidas.
-	\begin{itemize}
-	 \item Alineado con un Elemento de Estructura del Programa Sectorial
-	 \item Alineado con un Elemento de Estructura de otro Programa
-	 \item Alineado con un Elemento de Estructura del Programa Sectorial y uno de otro Programa
-	\end{itemize}
-}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN44}{Proyecto Registrado}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Un proyecto Registrado es aquel donde se puede alinear el proyecto. Los datos obligatorios para un Proyecto Registrado son los señalados en \ref{dd:DatosEditablesProyecto}. 
-}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN45}{Eliminación de Programa marcado como programa sectorial}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Un Programa no se puede eliminar si está marcado como programa sectorial.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN46}{Elemento}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Un Elemento es un programa/estructura/proyecto.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN47}{Modificación de nombre}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Todo campo llamado nombre no será modificable a excepción de los catálogos:
-		\begin{itemize}
-			\item Usuario
-			\item Nivel
-		\end{itemize}
-	}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN48}{Nivel máximo para agregar Estructura}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Una Estructura sólo se podrá agregar si no supera el máximo Nivel definido en el Programa.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN49}{Alineación de proyecto}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Un proyecto se relaciona con una Estructura, a ésa relación se le conoce como alineación.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN50}{Eliminación de Área}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{No se puede eliminar una Área que ya haya sido asociada a un Usuario.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN51}{Reasignación de datos asociados}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Se reasigna el trabajo de un Usuario a otro cada vez que el primero se \textit{``Desactiva''} y el segundo permanece activo.}
-\end{BussinesRule}
-\begin{BussinesRule}{RN53}{Pregunta de un Indicador}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{El valor del campo ``Pregunta'' de un Indicador no se puede repetir dentro de la misma Acción.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN54}{Peso de un Indicador}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{La suma total del Peso de los Indicadores desde \textbf{$I_{1}$} hasta \textbf{$I_{n}$} debe ser menor o igual a \textbf{100}, donde \textbf{$I_{1}$} es el Primer Indicador de la Acción y \textbf{$I_{n}$} es el Ultimo Indicador de la Acción.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN55}{Meta de un Indicador}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{El valor del campo ``Meta'' de un Indicador debe ser mayor o igual al valor establecido en el último avance.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN56}{Eliminar con avances}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Aquellos catálogos en los que se hayan reportado avances no podrán ser eliminados. Se consideran los catálogos:
-	\begin{itemize}
-	 \item Indicador
-	 \item Acción
-	\end{itemize}
-}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN57}{Agregar Presupuesto}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{El monto del presupuesto que se desea agregar debe de ser mayor a 0}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN58}{Eliminar Presupuesto}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Para poder eliminar un presupuesto, éste no tiene que estar aprobado}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN59}{Envío de proyecto para aprobación}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Un proyecto enviado para aprobación pasa del estado de ''Edición`` al estado de ''Revisión". Para que un proyecto pueda ser enviado debe de cumplir con las siguientes restricciones:
-			\begin{itemize}
-				\item Cumplir con la \BRref{RN43}
-	 			\item Tener definida al menos una acción
-	 			\item Por cada acción definida se debe de tener al menos un indicador
-				\item La suma del peso de los indicadores por cada acción debe ser igual a 100
-			\end{itemize}					
-	}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN60}{Jerarquía de periodos}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Al definir un periodo relativo para un nodo, sus descendientes no pueden definir su periodo como determinado.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN61}{Peso del indicador}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Para poder agregar un indicador físico el peso debe tener un valor mayor a 0}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN62}{Monto Aprobado}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{El monto aprobado tiene que ser positivo y por defecto deber ser el que se solicito.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN63}{Monto Aprobado}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{La suma de los montos de sus ejercicios es menor que el monto aprobado.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN64}{Gerente Encargado}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{Para un proyecto cuya alineación corresponde a un solo programa el gerente encargado es el gerente de dicho programa. En otro caso el gerente encargado será aquel cuyo programa no es el programa sectorial.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN65}{Mensajes visibles a usuario}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{El usuario solo podrá ver los mensajes que fueron hechos por él o los mensajes que fueron enviados a él.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN66}{Tipos de registro}
-	\BRitem{Tipo:}{Definición.}
-	\BRitem{Descripción:}{Los registros en la bitácora están asociados con un tipo de registro para saber el estado actual de la restricción. Éstos se definen a continuación:
-		\begin{itemize}
-			\item 1: Observación
-			\item 2: Restricción
-			\item 3: Atención inmediata
-			\item 4: Derivación
-			\item 5: Atención director
-			\item 6: Atención turnada
-			\item 7: Ajuste
-		\end{itemize}
-}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN67}{Encadenamiento por proyecto, referencia y tipo de restricciones}
-	\BRitem{Tipo:}{Restricción.}
-	\BRitem{Descripción:}{Los mensajes deben ser ordenados de acuerdo a ciertos criterios. Éstos se listan a continuación:
-		\begin{itemize}
-			\item Los mensajes dentro de una restricción deben ser agrupados por el proyecto que se seleccionó.
-			\item Los mensajes después serán agrupados la referencia que tienen en común.
-			\item Las mensajes serán ordenadas por el tipo de restricción y el estilo de éstas será definido por el tipo de restricción en el que se encuentra.
-		\end{itemize}
-}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN68}{Todas las restricciones en un proyecto P}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{La suma de todos los elementos de bitácora que tienen un Identificador de tipo igual a 2 dentro del proyecto P.
-		\begin{itemize}
-			\item select sum (*) from bitacora where idtipo = 2 \&\& idProyecto = P
-		\end{itemize}
-}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN69}{Todas las restricciones atendidas en un proyecto P}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{La suma de todos los elementos de bitácora que tienen un Identificador de tipo igual a 3 o 6 dentro del proyecto P.}
-		\begin{itemize}
-			\item select sum (*) from bitacora where idtipo = 3 || idtipo = 6 \&\& idProyecto = P
-		\end{itemize}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN70}{Todas las restricciones turnadas en un proyecto P}
-	\BRitem{Tipo:}{Definición}
-	\BRitem{Descripción:}{La suma de todos los elementos de bitácora que tienen un Identificador de tipo igual a 4 dentro del proyecto P, no tienen un Identificador de tipo igual a 5 y su identificador de referencia es el mismo.}
-		\begin{itemize}
-			\item select sum (*) from bitacora b where b.idtipo = 4 \&\& b.idProyecto = P where b.idRef not in (select * bitacora where idtipo = 5 \&\& idProyecto = P \&\& idRef = b.idRef)
-		\end{itemize}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN71}{Reporte de avance de un proyecto}
-	\BRitem{Tipo:}{Restricción}
-	\BRitem{Descripción:}{Al reportar el avance de un proyecto se debe aumentar al menos en una unidad algún indicador.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN72}{Fecha de aprobación del presupuesto}
-  \BRitem{Tipo:}{Restricción}
-  \BRitem{Descripción:}{Al registrar una nueva aprobación, el sistema colocará la fecha actual por defecto con opción de modificarla.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN73}{Indicador Completado}
- \BRitem{Tipo:}{Restricción}
-\BRitem{Descripción:}{Un indicador está completo cuando el número de avances es igual a la meta.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN74}{Acción completada}
- \BRitem{Tipo:}{Restricción}
-\BRitem{Descripción:}{Una acción está completa cuando sus indicadores están completados.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN75}{Presupuesto ejercido}
- \BRitem{Tipo:}{Resticción}
-\BRitem{Descripción:}{No se podrá cerrar un proyecto si aún hay presupuesto disponible para dicho proyecto.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN76}{Cierre de Proyecto}
- \BRitem{Tipo:}{Restricción}
-\BRitem{Descripción:}{El proyecto deberá estar en ejecución para poder cerrar un proyecto.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN77}{Fecha de cierre de Proyecto}
- \BRitem{Tipo:}{Definición}
-\BRitem{Descripción:}{Se pondrá por defecto la fecha del sistema con la opción de que el usuario pueda agregar una fecha distinta.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN78}{Resumen de proyecto}
- \BRitem{Tipo:}{Definición}
-\BRitem{Descripción:}{ El resumen de un proyecto cuenta con los siguientes datos
-\begin{itemize}
- \item Siglas: Iniciales del nombre del Proyecto
- \item Nombre del proyecto: Nombre que identifica el Proyecto
- \item Acciones: Las acciones del proyecto
- \item Indicadores: Los indicadores del proyecto
- \item Metas: Las metas que desea alcanzar el proyecto
- \item Evidencias: Las evidencia que generará el proyecto
- \item Presupuesto: El presupuesto del proyecto
-\end{itemize}
-}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN79}{Avance de un proyecto}
-  \BRitem{Tipo:}{Definición}
-  \BRitem{Descripción:}{De acuerdo al avance de los indicadores del proyecto se coloreará las barras en función del avance obtenido hasta el momento}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN80}{Resto de un proyecto}
-  \BRitem{Tipo:}{Definición}
-  \BRitem{Descripción:}{Es el monto de dinero que se calcula sumando el monto usado por cada ejercicio realizado y restando esto al monto total del presupuesto.}
-\end{BussinesRule}	
-
-\begin{BussinesRule}{RN81}{Calcular el avance}
-  \BRitem{Tipo:}{Definición}
-  \BRitem{Descripción:}{Se calcula el avance.}
-\end{BussinesRule}
-
-\begin{BussinesRule}{RN82}{Presupuesto disponible}
-  \BRitem{Tipo:}{Definición}
-  \BRitem{Descripción:}{Es el monto de dinero disponible en un proyecto a ejercer. Éste se calcula sumando el monto de dinero previamente usado por cada ejercicio realizado y restándolo al monto total del presupuesto asignado. No puede ser menor a cero y no puede ser mayor al presupuesto total asignado.}
-\end{BussinesRule}
-
-%TODO: reglas de negocio de metas, indicadores y acciones
-% \begin{BussinesRule}{RN}{Acción.}
-% 	\BRitem{Tipo:}{Definición}
-% 	\BRitem{Descripción:}{Son las tareas o actividades que se desarrollan en un proyecto. Una acción es la unidad mínima en la cual se puede dividir un proyecto.}
-% \end{BussinesRule}
-
-
-% \begin{BussinesRule}{RN}{Indicador financiero.}
-% 	\BRitem{Tipo:}{Definición}
-% 	\BRitem{Descripción:}{.}
-% \end{BussinesRule}
-
-
-%TODO:Revisión de las reglas de negocio siguientes
-
-% \begin{BussinesRule}{RN13}{Fuente.}
-% 	\BRitem{Tipo:}{Definición}
-% 	\BRitem{Descripción:}{Institución a la que se le puede solicitar dinero para algún Programa 1n/programa/acción y que lo puede entregar.}
-% \end{BussinesRule}
-% 
-% \begin{BussinesRule}{RN14}{Estado del presupuesto.}
-% 	\BRitem{Tipo:}{Definición}
-% 	\BRitem{Descripción:}{Existen los siguientes estados para el\begin{BussinesRule}{RN37}{Elemento.}
-% 	\BRitem{Tipo:}{Definición}
-% 	\BRitem{Descripción:}{Elemento es un programa/estructura/proyecto.}
-% \end{BussinesRule}
-% 
-% \begin{BussinesRule}{RN38}{Modificación de nombre.}
-% 	\BRitem{Tipo:}{Restricción}
-% 	\BRitem{Descripción:}{Todo campo llamado nombre no será modificable.}
-% \end{BussinesRule} presupuesto de un Programa 1n/proyecto/acción:
-% 	\begin{enumerate}
-% 		\item Solicitado: cuando se pide el dinero a alguna fuente.
-% 		\item Asignado: cuando la fuente entrega dinero.
-% 		\item Ejercido: cuando se utiliza el presupuesto.
-% 	\end{enumerate}
-% }
-% \end{BussinesRule}
-
-% \begin{BussinesRule}{RN5}{Limite de presupuesto ejercido.}
-% 	\BRitem{Tipo:}{Definición}
-% 	\BRitem{Descripción:}{El presupuesto ejercido jamas será mayor al asignado.}
-% \end{BussinesRule}
-% 
-% 
-% \begin{BussinesRule}{RN7}{Estado del Programa 1n.}
-% 	\BRitem{Tipo:}{Definición}
-% 	\BRitem{Descripción:}{Se determina el estado del Programa 1n tomando el mayor nivel de alerta de todos los proyectos del Programa 1n.}
-% \end{BussinesRule}
-% 
-% 
-% \begin{BussinesRule}{RN8}{Alerta.}
-% 	\BRitem{Tipo:}{Definición}
-% 	\BRitem{Descripción:}{Notificación al usuario de algún hecho que afecte a un programa, proyecto, etc.}
-% \end{BussinesRule}
-% 
-% \begin{BussinesRule}{RN9}{Tipos y niveles de alerta.}
-% 	\BRitem{Tipo:}{Definición}
-% 	\BRitem{Descripción:}{Se manejan los siguientes tipos de alerta:
-% 	\begin{itemize}
-% 		\item Físicas: Aquellas calculadas del avance del proyecto y del criterio del coordinador. Hay 3 niveles:
-% 		\begin{enumerate}
-% 			\item Representado por el color verde: El proyecto/Programa 1n/acción esta en tiempo.
-% 			\item Representado por el color amarillo: El proyecto/Programa 1n/acción esta atrasado según su avance y su tiempo de tolerancia.
-% 			\item Representado por el color rojo: El coordinador del proyecto pone una restricción.
-% 		\end{enumerate}
-% 		\item Financieras: Se calculan a partir del estado del presupuesto y del criterio del coordinador. Hay 3 niveles:
-% 		\begin{enumerate}
-% 			\item Representado por el color verde: Tiene presupuesto asignado.
-% 			\item Representado por el color amarillo: El presupuesto ha sido solicitado.
-% 			\item Representado por el color rojo: El coordinador del proyecto pone una restricción.
-% 		\end{enumerate}
-% 	\end{itemize}
-% }
-% \end{BussinesRule}
-% 
-% \begin{BussinesRule}{RN10}{Pp1n sin gasto.}
-% 	\BRitem{Tipo:}{Definición}
-% 	\BRitem{Descripción:}{Aquel que no requiere llevar control del presupuesto debido a que el dinero se toma del asignado a la dependencia para sus funciones.}
-% \end{BussinesRule}
-% 
-% 
-% \begin{BussinesRule}{RN11}{Duración relativa.}
-% 	\BRitem{Tipo:}{Definición}
-% 	\BRitem{Descripción:}{Es la duración de un Programa 1n especificada en unidades de tiempo (día, mes, año), sin especificar fechas.}
-% \end{BussinesRule}
-
-
-%TODO: Generar el diagrama de estados del proyecto
-
-% \begin{BussinesRule}{RN16}{Estados de proyecto.}
-% 	\BRitem{Tipo:}{Definición}
-% 	\BRitem{Descripción:}{Existen los siguientes estados para un proyecto:
-% 	\begin{enumerate}
-% 		\item Prerregistrado: El coordinador lo da de alta en el sistema.
-% 		\item Registrado: El administrador valida los datos del proyecto.
-% 		\item Aprobado: El director lo aprueba.
-% 		\item En curso: Se ha reportado al menos una vez el avance. Se cancela la posibilidad de modificar tiempos.
-% 		\item En modificación: El director permite la modificación de tiempos.
-% 	\end{enumerate}
-% 
-% }
-% \end{BussinesRule}
-
-
-
-
-
-
-
-
-
-% Por definir:
-
-
-
-
-%=======================
-	
