--- a/reglas.tex
+++ b/reglas.tex
@@ -4,3 +4,8 @@
 	\BRitem{Tipo:}{Restricción}
 	\BRitem{Descripción:}{Cada reporte de actividades debe estar asociados con un empleado que se encuentre entre los datos de nomina y asistencia.}
 \end{BussinesRule}
+
+\begin{BussinesRule}{RN2}{Reingreso de datos.}
+	\BRitem{Tipo:}{Restricción}
+	\BRitem{Descripción:}{Cuando se ingresen los datos de un periodo mas de una vez, cada ingreso sobreescribira los datos anteriores, perdiendose para siempre.}
+\end{BussinesRule}
